--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^2"
+    "@cap-js/sqlite": "^2",
+    "cds-plugin-ui5": "^0.13.0"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-clientes": "cds watch --open comp.container.com.clientes/index.html?sap-ui-xx-viewCache=false --livereload false",
+    "watch-produtos": "cds watch --open comp.container.com.produtos/index.html?sap-ui-xx-viewCache=false --livereload false"
   },
   "cds": {
     "requires": {
@@ -22,5 +25,12 @@
       }
     }
   },
-  "private": true
+  "private": true,
+  "workspaces": [
+    "app/*"
+  ],
+  "sapux": [
+    "app/clientes",
+    "app/produtos"
+  ]
 }
