chore: update devDependencies and add new app to sapux configuration
- Added cds-launchpad-plugin version 2.2.0 to devDependencies.
- Included "app/cockpit" in the sapux array alongside existing apps.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^2",
+    "cds-launchpad-plugin": "^2.2.0",
     "cds-plugin-ui5": "^0.13.0"
   },
   "scripts": {
@@ -32,6 +33,7 @@
   ],
   "sapux": [
     "app/clientes",
-    "app/produtos"
+    "app/produtos",
+    "app/cockpit"
   ]
 }
