Add annotations and manifest updates for Clientes and Produtos services

--- a/app/clientes/webapp/manifest.json
+++ b/app/clientes/webapp/manifest.json
@@ -127,9 +127,18 @@
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
                     "type": "ResponsiveTable"
+                  },
+                  "columns": {
+                    "DataField::ID": {
+                      "width": "50%"
+                    },
+                    "DataField::nome": {
+                      "width": "50%"
+                    }
                   }
                 }
-              }
+              },
+              "initialLoad": "Enabled"
             }
           }
         },
