Refactor routing patterns and component structure for Clientes and Produtos in Cockpit application

--- a/app/clientes/webapp/manifest.json
+++ b/app/clientes/webapp/manifest.json
@@ -97,7 +97,7 @@
       "config": {},
       "routes": [
         {
-          "pattern": ":?query:",
+          "pattern": "Clientes",
           "name": "ClientesList",
           "target": "ClientesList"
         },
