Update routing patterns for Clientes and Produtos to work with main routing prefix

--- a/app/clientes/webapp/manifest.json
+++ b/app/clientes/webapp/manifest.json
@@ -97,7 +97,7 @@
       "config": {},
       "routes": [
         {
-          "pattern": "Clientes",
+          "pattern": ":?query:",
           "name": "ClientesList",
           "target": "ClientesList"
         },
