--- a/app/produtos/webapp/manifest.json
+++ b/app/produtos/webapp/manifest.json
@@ -97,7 +97,7 @@
       "config": {},
       "routes": [
         {
-          "pattern": "Produtos",
+          "pattern": ":?query:",
           "name": "ProdutosList",
           "target": "ProdutosList"
         },
